--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -17,6 +17,10 @@
   &:hover {
     .custom-button {
       visibility: visible;
+      opacity: 0.85;
+    }
+    .image {
+      opacity: 0.8;
     }
   }
 
@@ -32,10 +36,7 @@
     .image {
       opacity: 0.8;
     }
-    .custom-button {
-      opacity: 0.85
-      display-flex;
-    }
+
   }
   
   .collection-footer {
